# NexusCore

./: .gitignore  DEMO_FLOW.md  README.md  ROADMAP.md  TECHNICAL_OVERVIEW.md  TODO.md  conftest.py  docker-compose.yml  pyproject.toml  setup.py  tree.txt
api/: mission_datasets.py
core/: requirements.txt
data/: aggregator.duckdb
nexuscore/core/aggregator/: __init__.py  client.py  exceptions.py  models.py
nexuscore/core/ai/: __init__.py  dictionary.py  interpreter.py  transformer.py
nexuscore/core/apex/: __init__.py  client.py  exceptions.py
nexuscore/services/: ingestion.py
tests/: conftest.py
tests/unit/: test_agent_analysis_guardrails.py  test_evidence_extractor_service.py  test_graph_api.py  test_template_report_service.py
